src/negative_test_cases/Testcases/setLiteralWrongType.stl
void main()
{
        Set j;
        Set k;
        Question q1;
        Question q2;
        Question q3;
        int z = 5;
        Set l = [q1, $"Math-Easy":"What is 5*4?"["20":10, "9":-4, "10":0]$, z]; %% can only insert questions into a set
        Set n = [];
        k = [q2];
        k = [];
        k = [q1, q2];
}
